Update: Melhorados métodos e modelos, corrigido swagger
