# PAWTPGrupo04/api/routes/requestrouter.js
@@ -10,6 +10,7 @@ requestrouter.get('/trabalhadores', requestController.getTrabalhadoresRisco);
 requestrouter.get('/infetados', requestController.getInfetados);
 requestrouter.get('/testespositivos', requestController.getPositivos);
 requestrouter.get('/testesnegativos', requestController.getNegativos);
+requestrouter.get('/countDay/:id', requestController.countPerDay);
 
 requestrouter.post('/', requestController.fillPedido);
 
@@ -20,10 +21,14 @@ requestrouter.get('/:id', requestController.getPedidobyID);
 requestrouter.put('/:id',  //to update everything possible without verifications via the id
     requestController.updatePedido);
 
-requestrouter.put('/testinfo/:id',  //to update via the id
-    requestController.updateTestInfo);
+requestrouter.put('/update/firstDate/:id',
+    requestController.updateDataPrimeiroTeste);
+requestrouter.put('/update/firstTest/:id',
+    requestController.updateResultadoPrimeiroTeste);
+requestrouter.put('/update/secondTest/:id',
+    requestController.updateResultadoSegundoTeste);
 
-requestrouter.put('/requestResponsible/:id',  //to update via the id
+requestrouter.put('/update/worker/:id',  //to update via the id
     requestController.updateTecnicoResponsavel);
 
 requestrouter.delete('/:id', requestController.deletePedido);
